errors.txt
my_debugger.c:50:48: error: expected declaration specifiers or ‘...’ before string constant
 void run_redirection_debugger(pid_t child_pid, __FILE__* fp, long start_addr, bool copy)
                                                ^~~~~~~~
my_debugger.c: In function ‘main’:
my_debugger.c:124:39: warning: passing argument 3 of ‘strtol’ makes integer from pointer without a cast [-Wint-conversion]
     long addr = strtol(argv[1], NULL, NULL);
                                       ^~~~
In file included from my_debugger.c:12:0:
/usr/include/stdlib.h:176:17: note: expected ‘int’ but argument is of type ‘void *’
 extern long int strtol (const char *__restrict __nptr,
                 ^~~~~~
my_debugger.c:132:16: error: ‘fp’ undeclared (first use in this function)
     __FILE__ * fp = open(fname, O_CREATE);
                ^~
my_debugger.c:132:16: note: each undeclared identifier is reported only once for each function it appears in
my_debugger.c:132:21: warning: implicit declaration of function ‘open’; did you mean ‘fopen’? [-Wimplicit-function-declaration]
     __FILE__ * fp = open(fname, O_CREATE);
                     ^~~~
                     fopen
my_debugger.c:132:33: error: ‘O_CREATE’ undeclared (first use in this function)
     __FILE__ * fp = open(fname, O_CREATE);
                                 ^~~~~~~~
my_debugger.c:136:5: warning: implicit declaration of function ‘run_redirection_debugger’ [-Wimplicit-function-declaration]
     run_redirection_debugger(child_pid, fp, addr, copy);
     ^~~~~~~~~~~~~~~~~~~~~~~~
my_debugger.c:136:30: error: ‘child_pid’ undeclared (first use in this function); did you mean ‘c_pid’?
     run_redirection_debugger(child_pid, fp, addr, copy);
                              ^~~~~~~~~
                              c_pid
